...
    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_with_email_button"
        app:layout_constraintEnd_toEndOf="@+id/facebook_login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/facebook_login_button"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

    <androidx.appcompat.widget.AppCompatButton
...
