...
    <string name="filter_by_distance">Filter by distance</string>
    <string name="radius">Radius:</string>
    <string name="kilometers">km</string>


    <!--Login activity elements-->
    <string name="email_signin_text">Sign up with E-mail</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="bad_credentials">Credentials has been malformed or expired</string>
    <string name="duplicate_user">User with same credentials already exists</string>
    <string name="wrong_credentials">Wrong credentials. Please try again</string>
    <string name="credentials_missing">Please fill your credentials</string>
    <string name="sign_up">Sign Up</string>
...
